--- a/RK2/app/views/array_product/index.html.erb
+++ b/RK2/app/views/array_product/index.html.erb
@@ -1,16 +1,12 @@
-<p>Вариант №4 Архипов Артём ИУ6-33Б</p>
-<p>Дан массив чисел arr_n. Определить произведение элементов массива кратных 3 и поместить
-ее на место элемента с индексом k, где k – введенное значение.</p>
+<p>Вариант №1 Архипов Артём ИУ6-33Б</p>
+<p>Дан массив чисел arr_n. Определить сумму
+отрицательных элементов массива и поместить ее
+на место первого нечетного элемента.</p>
 
 <h1>Введите массив чисел</h1>
 <%= form_tag(array_product_calculate_path, method: 'get') do %>
   <label for="input_array">Массив (через запятую): </label>
   <%= text_field_tag :input_array, @default_values.join(',') %>
-
-  <br>
-
-  <label for="k">Введите k: </label>
-  <%= number_field_tag :k, 2 %>
 
   <br>
 
