--- a/RK2/app/views/array_product/calculate.html.erb
+++ b/RK2/app/views/array_product/calculate.html.erb
@@ -1,3 +1,3 @@
 <h1>Результат</h1>
-<p>Массив с произведением на <%= @k %>-м месте:</p>
+<p>Массив с суммой отрицательных чисел на месте первого нечетного элемента:</p>
 <%= @result_array.join(', ') %>
